docs/versioned_docs/version-3.10.1/reference/01-configuration.mdx
---
title: Configuration
description: True Native Bottom Sheet configuration props.
keywords: [bottom sheet props, bottom sheet configuration, bottom sheet preferences]
---

Configuration props available for `TrueSheet`. Extends `ViewProps`.

```tsx {2-5}
<TrueSheet
  ref={sheet}
  detents={['auto', 0.8, 1]}
  backgroundColor="#696969"
  // ...
>
  <View />
</TrueSheet>
```

## `ref`

We use `ref` to reference our sheet and call the [imperative methods](methods). Learn more about refs [here](https://react.dev/learn/referencing-values-with-refs).

## `detents`

Array of detents you want the sheet to support. See [this guide](../guides/resizing) for example.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`SheetDetent[]`](types#sheetdetent) | `[0.5, 1]` | ✅ | ✅ | ✅ |

:::info
A sheet can only support up to **3** detents only! AKA **_collapsed_**, **_half-expanded_**, and **_expanded_**.
:::

:::tip
It's recommended to sort detents from **smallest to largest**.
:::

## `name`

The name to reference this sheet. It has to be **_unique_**. You can then present this sheet globally using its name. See [this guide](../guides/global-methods) for example.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `string` | | ✅ | ✅ | ✅ |

## `backgroundColor`

The sheet's background color. Uses the system default when not provided.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `ColorValue` | _system default_ | ✅ | ✅ | ✅ |

:::info
When not provided, iOS 26+ uses the default [Liquid Glass](../guides/liquid-glass) effect, while iOS 18 and below uses the system background color. Android uses Material Design 3's `colorSurfaceContainerLow` which automatically adapts to light/dark mode.

On iOS 26.1+, setting this prop will override the default [Liquid Glass](../guides/liquid-glass) effect.
:::

## `backgroundBlur`

The blur effect style on iOS. When set, applies a blur effect over the [`backgroundColor`](#backgroundcolor). Example: `"light"`, `"dark"`, etc.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`BackgroundBlur`](types#backgroundblur) | | ✅ | | |

:::info
On iOS 26.1+, setting this prop will override the default [Liquid Glass](../guides/liquid-glass) effect.
:::

## `blurOptions`

Options for customizing the blur effect. Only applies when [`backgroundBlur`](#backgroundblur) is set.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`BlurOptions`](types#bluroptions) | | ✅ | | |

```tsx
<TrueSheet
  backgroundBlur="dark"
  blurOptions={{
    intensity: 80,
    interaction: false,
  }}
>
  <View />
</TrueSheet>
```

## `cornerRadius`

The sheet corner radius.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | _system default_ | ✅ | ✅ | ✅ |

:::info
When not provided, iOS uses the device's native corner radius automatically, while Android defaults to `16` (following Material Design 3 guidelines).
:::

## `elevation`

The elevation (shadow depth) of the sheet.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | `4` | | ✅ | ✅ |

## `maxContentHeight`

The absolute maximum height of the sheet content, regardless of detents.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | | ✅ | ✅ | ✅ |

## `maxContentWidth`

The maximum width of the sheet content.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | | ✅ | ✅ | ✅ |

:::info
On Android and Web, the sheet defaults to a maximum width of `640dp`. Setting this prop overrides that default. On iOS, the sheet uses the system default width.
:::

:::note
This prop is ignored on phones in portrait orientation — the sheet always spans the full width.
:::

## `anchor`

Anchors the sheet to the specified horizontal edge.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `'left' \| 'center' \| 'right'` | `'center'` | ✅ | ✅ | ✅ |

:::info
On iOS, the sheet uses `sourceView` to control horizontal positioning. System-defined margins prevent fully flush edge attachment.
:::

:::note
This prop is ignored on phones in portrait orientation.
:::

## `anchorOffset`

The offset from the screen edge. Only applies when [`anchor`](#anchor) is `'left'` or `'right'`.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | `16` | | ✅ | ✅ |

## `dismissible`

If set to `false`, the sheet will prevent interactive dismissal via dragging or clicking outside of it.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `true` | ✅ | ✅ | ✅ |

## `draggable`

If set to `false`, the sheet will disable dragging to resize. The sheet can only be resized programmatically using the [`resize`](methods#resize) method.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `true` | ✅ | ✅ | ✅ |

:::info
When `draggable` is `false`, the [`grabber`](#grabber) is automatically hidden.
:::

## `dimmed`

Specify whether the sheet background is dimmed. Set to `false` to allow interaction with the background components.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `true` | ✅ | ✅ | ✅ |

## `dimmedDetentIndex`

The detent index that the sheet should start to dim the background.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | `0` | ✅ | ✅ | ✅ |

:::info
This is ignored if `dimmed` is set to `false`.
:::

## `initialDetentIndex`

Initially present the sheet, after mounting, at a given detent index.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | `-1` | ✅ | ✅ | ✅ |

## `initialDetentAnimated`

Specify whether the sheet should animate after mounting.
Used with `initialDetentIndex`.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `true` | ✅ | ✅ | ✅ |

## `grabber`

Shows a native grabber (or drag handle) on the sheet.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `true` | ✅ | ✅ | ✅ |

:::info
iOS uses the native `UISheetPresentationController` grabber by default, while Android renders a native view following [Material Design 3 specifications](https://m3.material.io/components/bottom-sheets/specs) (32x4dp, centered, with the standard drag handle color).

When [`grabberOptions`](#grabberoptions) is provided, iOS uses a custom grabber view instead of the system default.
:::

## `grabberOptions`

Options for customizing the grabber appearance. Only applies when [`grabber`](#grabber) is `true`.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`GrabberOptions`](types#grabberoptions) | | ✅ | ✅ | |

```tsx
<TrueSheet
  grabber
  grabberOptions={{
    width: 48,
    height: 6,
    topMargin: 10,
    color: '#FF0000',
  }}
>
  <View />
</TrueSheet>
```

:::info
On iOS, when `grabberOptions` is not provided, the native system grabber is used. When any option is provided, a custom grabber view with vibrancy effect is rendered instead.
:::

## `header`

A component that is fixed at the top of the sheet content. Useful for search bars, titles, or other header content. The header height is automatically accounted for in layout calculations. Accepts a functional `Component` or `ReactElement`. See [this guide](../guides/header) for example.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `ComponentType<...> \| ReactElement` | | ✅ | ✅ | ✅ |

## `headerStyle`

Style for the header container.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `StyleProp<ViewStyle>` | | ✅ | ✅ | ✅ |

## `footer`

A component that floats at the bottom of the sheet. Accepts a functional `Component` or `ReactElement`.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `ComponentType<...> \| ReactElement` | | ✅ | ✅ | ✅ |

## `footerStyle`

Style for the footer container.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `StyleProp<ViewStyle>` | | ✅ | ✅ | ✅ |

## `scrollable`

On iOS, automatically pins ScrollView or FlatList to fit within the sheet's available space. When enabled, the ScrollView's top edge will be pinned below any top sibling views, and its left, right, and bottom edges will be pinned to the container. See [this guide](../guides/scrolling) for example.

On Android, it ensures the scroll view fills the available sheet space and automatically manages nested scrolling. Any `nestedScrollEnabled` prop on your `ScrollView` or `FlatList` is ignored when `scrollable` is enabled.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `false` | ✅ | ✅ | |

:::warning
The [`auto`](types#sheetdetent) detent is not supported with `scrollable`. Use fixed fractional detents (e.g., `0.5`, `0.8`, `1`) instead.
:::

## `scrollableOptions`

Options for customizing scrollable behavior. Only applies when `scrollable` is `true`.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`ScrollableOptions`](types#scrollableoptions) | | ✅ | ✅ | |

## `pageSizing`

Controls the sheet presentation style on iPad. When enabled (true), uses a large page sheet for better readability. When disabled (false), uses a centered form sheet.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `true` | **_17+_** | | |

## `insetAdjustment`

Controls how the bottom safe area inset affects detent heights.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`InsetAdjustment`](types#insetadjustment) | `"automatic"` | ✅ | ✅ | |

## `detached`

Renders the sheet as a detached floating card, not attached to the bottom edge.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `boolean` | `false` | | | ✅ |

## `detachedOffset`

The offset from the bottom edge when [`detached`](#detached) is enabled.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `number` | `16` | | | ✅ |

## `stackBehavior`

Defines the stack behavior when a modal is presented while another is visible. See [this guide](../guides/stacking) for example.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| [`StackBehavior`](types#stackbehavior) | `"switch"` | | | ✅ |

## `style`

The sheet's container style override.

| Type | Default | 🍎 | 🤖 | 🌐 |
| - | - | - | - | - |
| `StyleProp<ViewStyle>` | | ✅ | ✅ | ✅ |
